--- a/first/index.css
+++ b/first/index.css
@@ -1,3 +1,26 @@
-.p {
-    padding-left: ;
+body {
+    width: 100vw;
+    height: 100vh;
+    background-color: gray;
+}
+
+.header {
+    margin: 0;
+    width: 100%;
+    height: 10vh;
+    background-color: black;
+}
+
+.main content {
+    width: 100px;
+    height: 200px; 
+    background-color: white;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.footer {
+    background-color: darkgray;
+    width: 100;
+    height: 20px;
 }
