--- a/second/index.css
+++ b/second/index.css
@@ -1,1 +1,31 @@
-.
+.top-container {
+
+}
+
+#purple-box {
+
+}
+
+#green-box {
+
+}
+
+#blue-circle {
+
+}
+
+.mid-container {
+
+}
+
+#yellow-box {
+
+}
+
+.bottom-container {
+
+}
+
+#greeting-box {
+    
+}
