--- a/first/index.css
+++ b/first/index.css
@@ -1,26 +1,30 @@
 body {
+    margin: 0;
     width: 100vw;
     height: 100vh;
-    background-color: gray;
+    background-color: white;
 }
 
 .header {
-    margin: 0;
     width: 100%;
     height: 10vh;
     background-color: black;
 }
 
-.main content {
-    width: 100px;
-    height: 200px; 
-    background-color: white;
+.main-content {
+    margin: 0 auto;
+    width: 70vw;
+    height: 60vh; 
+    background-color: green;
     padding-left: 20px;
     padding-right: 20px;
 }
 
 .footer {
+    margin: auto;
     background-color: darkgray;
-    width: 100;
-    height: 20px;
+    width: 70vw;
+    height: 60px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
