reset css added

--- a/third/index.css
+++ b/third/index.css
@@ -4,21 +4,26 @@ body, html {
   }
 
 .top-gray {
-
+    height: 100px;
+    width: 100vw;
 }
 
 .white-article {
-
+    height:
+    width: 
 }
 
 .blue-row {
-
+    height:
+    width: 
 }
 
 .cyan-row {
-
+    height:
+    width: 
 }
 
 .yellow-green-row {
-
+    height:
+    width: 
 }
