--- a/second/index.css
+++ b/second/index.css
@@ -16,20 +16,34 @@ body {
 }
 
 .purple-box {
-background-color: purple;
-
+    background-color: purple;
+    height: 80px;
+    width: 25px;
+    display: inline-block;
+    margin-right: 25px;
 }
 
 .green-box {
-background-color: green;
+    background-color: green;
+    height: 100px;
+    width: 200px;
+    display: inline-block;
+    margin-right: 25px;
 }
 
 .blue-circle {
-background-color: cyan;
+    background-color: cyan;
+    height: 100px;
+    width: 100px;
+    display: inline-block;
 }
 
 .cream-box {
-
+    background-color: tan;
+    height: 100px;
+    width: 80%;
+    margin: auto;
+    border
 }
 
 .bottom-container {
