--- a/first/index.css
+++ b/first/index.css
@@ -2,29 +2,30 @@ body {
     margin: 0;
     width: 100vw;
     height: 100vh;
-    background-color: white;
+    background-color: rgb(209, 209, 209);
+    display: block;
 }
 
 .header {
     width: 100%;
     height: 10vh;
-    background-color: black;
+    background-color: rgb(51, 51, 51);
 }
 
 .main-content {
     margin: 0 auto;
     width: 70vw;
-    height: 60vh; 
-    background-color: green;
+    height: 80vh; 
+    background-color: rgb(255, 255, 255);
     padding-left: 20px;
     padding-right: 20px;
 }
 
 .footer {
     margin: auto;
-    background-color: darkgray;
+    background-color: rgb(32, 32, 32);
     width: 70vw;
-    height: 60px;
+    height: 10vh;
     padding-left: 20px;
     padding-right: 20px;
 }
