--- a/third/index.css
+++ b/third/index.css
@@ -4,48 +4,62 @@ body, html {
   }
 
   .top-left-corner {
-    height: 75px;
-    width: 75px;
-    background-color: rgb(82, 133, 150);
-    
+    height: 100px;
+    width: 100px;
+    background-color: rgb(66, 164, 230);
+    position: relative;
+    top: 17px;
+    left: 38px;
 }
 
 .top-gray {
-    height: 100px;
+    height: 14.5vh;
     width: 100%;
-    background-color: gray;
+    background-color: rgb(184, 184, 184);
 
 }
 
 
 .white-article {
-    height: 300px; 
+    height: 27vh;
     width: 100%;
-
+    
 }
 
+.text {
+    width: 70%;
+    text-align: left;
+    font-size: 26px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(39, 39, 39);
+    position: relative;
+    top: 70px;
+    left: 260px;
+}
+
+
 .blue-row {
-    height: 100px;
+    height: 14.5vh;
     width: 100%;
-    background: rgb(82, 133, 150);
+    background: rgb(66, 164, 230);
 
 }
 
 .cyan-row {
-    height: 100px; 
+    height: 14.5vh;
     width: 100%;
-    background-color: cyan;
+    background-color: rgb(6, 255, 222);
 
 }
 
 .yellow-green-row {
-    height: 100px; 
+    height: 14.5vh;
     width: 100%;
-    background-color: yellowgreen;
+    background-color: rgb(187, 228, 106);
 }
 
 .yellow-row {
-    height: 100px;
+    height: 14.5vh;
     width: 100%;
-    background-color: yellow;
+    background-color: rgb(255, 238, 0);
 }
